--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==6.7
 dnspython==1.15.0
 eloquent==0.5
 eventlet==0.24.1
+Flask==1.0.2
+Flask-Cors==3.0.6
 gevent==1.3.6
 gevent-socketio==0.3.6
 greenlet==0.4.14
